# CriterionSample

./: CMakeLists.txt  README.md
include/: dangerous_add.h
source/: add.c  dangerous_add.c
test_abnormal/: CMakeLists.txt  run_test.sh  test_exit.c  test_signal.c
test_parameterize/: CMakeLists.txt  run_test.sh  test_parameterize.c
test_theory/: CMakeLists.txt  run_test.sh  test_theory.c
